--- a/security.html
+++ b/security.html
@@ -39,6 +39,30 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qIA9Vfw6&k=Job&j=oT5L9fwC&__jvst=Employee+Referral&__jvsd=suNSMgwG&__jvsc=Twitter&bid=nENhnMwm'>WP Engine Careers - Senior Security Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vgs/7eed1a68-cf63-4b1a-9bc1-2c20793fd704'>Very Good Security - Junior Software Engineer</a></h5> 
+<p><span class="badge badge-light">Lviv, Ukraine</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vgs/af76e96c-857b-46d0-9677-563e793913f1'>Very Good Security - Senior Backend Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
+<p><span class="badge badge-light">Kyiv, Ukraine</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/vgs/f2dfec1b-7e51-4311-8fcb-65583aebc863'>Very Good Security - Backend Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/grindr/jobs/1916136'>Job Application for Security Operations Engineer at Grindr</a></h5> 
+<p><span class="badge badge-light">West Hollywood</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/aid-driving/9d8505ce-96d2-42b4-9d83-52870536012a'>Autonomous Intelligent Driving GmbH - Security Architect ? Hardware & Embedded Systems</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -119,7 +143,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698284727-senior-security-engineer-ts-'>FireEye, Inc. Senior Security Engineer (TS) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FireEyeInc1/743999698284727-senior-security-engineer-ts-'>FireEye, Inc. Senior Security Engineer (TS) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -163,11 +187,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oEq0afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nBAzlMwm'>ServiceNow Careers - Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oEq0afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nBAzlMwm'>ServiceNow Careers - Security Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oyq0afwS&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nQgylMwg'>ServiceNow Careers - Senior Security Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oyq0afwS&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=nQgylMwg'>ServiceNow Careers - Senior Security Analyst</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -179,7 +203,7 @@
 <p><span class="badge badge-light">Minnesota, Minneapolis  Minneapolis</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
+<h5><a href='https://jobs.jobvite.com/extrahop-networks-inc/job/oyDqbfww'>ExtraHop Networks, Inc. Careers - Senior Security Sales Engineer, France</a></h5> 
 <p><span class="badge badge-light">France  France  Paris, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -213,7 +237,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA, USA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/binance/2714fb7e-6acd-4984-8776-c9e833c51c0e'>Binance - Security Engineer - SOC/Security Operations Center (Malta)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/binance/2714fb7e-6acd-4984-8776-c9e833c51c0e'>Binance - Security Engineer - SOC/Security Operations Center (Malta)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -237,7 +261,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.hirebridge.com/v3/CareerCenter/v2/details.aspx?cid=7883&jid=509257&locvalue=1016'>Security Operations Engineer I #509257 APAC-JPN-Tokyo</a></h5> 
+<h5><a href='https://recruit.hirebridge.com/v3/CareerCenter/v2/details.aspx?cid=7883&jid=509257&locvalue=1016'>Security Operations Engineer I #509257 APAC-JPN-Tokyo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 12, 2019 ... Provides the framework, processes and execution to ensure support of Jamfs 
 data leakage prevention; Responsible for Web application firewall and related?...</p>
@@ -250,7 +274,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -301,7 +325,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p>Oct 14, 2019 ... Info Security Analyst Program. Jersey City Charlotte Annandale Denver. Job 
 Description: Job Description: The women's Cyber Development Program is a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-IT-Security-Analyst_R_00006416'>Senior IT Security Analyst</a></h5> 
+<h5><a href='https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-IT-Security-Analyst_R_00006416'>Senior IT Security Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 13, 2019 ... Senior IT Security Analyst. PICKLE RESEARCH CAMPUS. Job Posting Title: 
 Senior IT Security Analyst. ----. Hiring Department: Applied Research 
@@ -328,7 +352,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">Canada London</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -344,7 +368,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698074222-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698074222-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -428,31 +452,7 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qmr9VfwB&k=Job&j=oEugbfwj&__jvst=Tenable+Employee&__jvsd=szNYEhwK&__jvsc=Twitter&bid=ncrzjMwM'>Tenable Careers - Security Engineer</a></h5> 
-<p><span class="badge badge-light">Melbourne</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698070000-senior-security-engineer'>Optimizely Senior Security Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Austin, TX</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999698065294-security-analyst'>Prospect Infosys Inc. Security Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Madison, WI</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzF9Vfw2&k=Job&j=or0ibfwE&__jvst=Employee&__jvsd=saIdRfwG&__jvsc=Twitter&bid=n9gdjMwc'>K2 Group, Inc. Careers - Cybersecurity System Security Engineer II</a></h5> 
-<p><span class="badge badge-light">California</span></p>
-<p>Posted on:: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698041462-application-security-engineer-'>Veeam Application Security Engineer (? ?????) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999697953465-security-engineer-cloud-infrastructure'>4Catalyzer Security Engineer - Cloud Infrastructure | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
